--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,9 @@
 image:
   file: .gitpod.Dockerfile
+  tasks:
+    - name: tft-shop  
+      command: |
+        poetry run threebot start --no-cert
 ports:
   - port: 443
     onOpen: open-browser
