--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,9 +3,7 @@ image:
 tasks:
     - name: shop
       command: |
-        sudo -s
-        sudo poetry install
-        sudo poetry shell && sudo ./entrypoint.sh
+        sudo -s && sudo ./entrypoint.sh
 ports:
   - port: 443
     onOpen: open-browser
