--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,7 +3,7 @@ image:
 tasks:
     - name: shop
       command: |
-        sudo -s && sudo poetry run threebot start --no-cert --background
+        sudo -s && sudo ./entrypoint.sh
 ports:
   - port: 80
     onOpen: open-browser
