--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,10 +3,7 @@ image:
 tasks:
     - name: shop
       command: |
-        sudo -s
-        poetry shell
-        bash ./entrypoint
-        poetry run threebot start --no-cert --background
+        sudo -s && bash ./entrypoint
 ports:
   - port: 80
     onOpen: open-browser
