--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,6 +4,7 @@ tasks:
     - name: shop
       command: |
         cd /home/gitpod/code/tftshop
+        electrum daemon -d --testnet
         poetry run threebot start --no-cert --local
 ports:
   - port: 8080
